2006-04-21 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Turned off filtering of stage. Untill this option is made accessible through GUI, filtering would have to be done manually. Automatic filtering seems to be a bad idea when tracking is lost and the originial file contains uneven time-stamps for a small span.

2006-04-21 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Sets and supplies correct flags to load new or edited files. Comaptible with load_laser_tracking 02.01
2006-04-14 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Offset in the .drift. field is now set to zero, so that dependent codes don't have to add it back manually while subtracting drift using 'polyval'. Related changes allover.

2006-04-13 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m:
	- Fixed a bug so where 'magdata' field was left empty when there was no magnet data attached to it. Now defaults to zero.
	- Does not automatically refresh the main figure window when switching to different files. Refreshing takes a while and gets annoying if not intended.

2006-04-11 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig: 
	- Loads and saves files correctly
	- Removes stage noise by default
	- Fixed couple of bugs and typos in frequency processing.
2006-03-27 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig: 
	- Added ability to save modified files as well as load thus saved files.
2006-03-05 Kalpit Desai <kvdesai@email.unc.edu>
	* lt_analysis_gui.m, lt_analysis_gui.fig: 
	- Now doesn't refresh time-domain plots automatically when any setting is changed. Added a separate button for that.
	- Incorporated msdbase code (soon to be committed) into gui.
2006-01-28 Kalpit Desai <kvdsai@email.unc.edu>
	* lt_analysis_gui.m: 